# carto

./: README.md  pyproject.toml
carto/: __init__.py  main.py
carto/agents/: __init__.py  action_planner.py  base.py  diff_narrative.py  form_filler.py  page_understanding.py  risk.py  state_diff.py
carto/agents/prompts/: __init__.py  action_planner.py  diff_narrative.py  form_filler.py  page_understanding.py  risk.py  state_diff.py
carto/analysis/: __init__.py  map_assembler.py  report_assembler.py  role_differ.py
carto/contracts/: __init__.py  commands.py  envelope.py
carto/domain/: __init__.py  approval.py  artifacts.py  auth.py  campaign.py  config.py  diff_narrative.py  events.py  inferences.py  models.py  observations.py  report.py  risk_input.py  role_diff.py  role_surface.py  schema.py
carto/executor/: __init__.py  base.py  browser.py
carto/export/: __init__.py  har.py  renderers.py
carto/llm/: __init__.py  client.py
carto/orchestrator/: __init__.py  campaign_runner.py  orchestrator.py
carto/storage/: __init__.py  event_log.py  session_store.py
carto/utils/: __init__.py  redaction.py
docs/: README_SCHEMA.md  architecture.md  auth.md  webapp-security-map-minimal.schema.json
tests/: __init__.py  test_agents_phase2.py  test_approval.py  test_auth_models.py  test_campaign.py  test_campaign_runner.py  test_config.py  test_contracts.py  test_diff_narrative.py  test_domain_models.py  test_event_log.py  test_events.py  test_har_export.py  test_inferences.py  test_llm_client.py  test_prompt_builders.py  test_redaction.py  test_renderers.py  test_report_assembler.py  test_report_models.py  test_risk_agent.py  test_role_diff.py  test_role_surface.py  test_session_store.py
